<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_remove_circle_outline_black_24dp"/>
     <item
        android:id="@+id/menu_cut"
        android:title="@string/cut"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_content_cut_black_24dp" />
    <item
        android:id="@+id/menu_copy"
        android:title="@string/copy"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_content_copy_black_24dp"/>
    <item
        android:id="@+id/menu_paste"
        android:title="@string/paste"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_content_paste_black_24dp"/>

    <item
        android:id="@+id/menu_cancel"
        android:title="@string/cancel"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_close_black_24dp"/>

</menu>