<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:title="@string/filter"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_tune_black_24dp"/>
    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_swap_vert_black_24dp"/>
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_loop_black_24dp" />
    <!--<item-->
        <!--android:id="@+id/menu_more"-->
        <!--android:title="@string/more"-->
        <!--app:showAsAction="always"-->
        <!--android:enabled="true"-->
        <!--android:icon="@drawable/ic_more_vert_black_24dp"-->
        <!--/>-->
</menu>